# my-govee

./: .env.example  .gitignore  LICENSE  README.md  govee_display.py  pyproject.toml  requirements.txt
govee/: __init__.py  animations.py  cli.py  client.py  colors.py  display.py  font.py  pixel.py  scenes.py  text.py
