[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "govee-display"
version = "1.0.0"
description = "Custom display controller for the Govee H6022 Quantum Desk Lamp — pixel art, text scrolling, and animated scenes via the Govee Cloud API v2."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "donewiththedollar" }]
requires-python = ">=3.8"
keywords = ["govee", "h6022", "led", "smart-lamp", "api", "pixel-art", "animations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[project.scripts]
govee-display = "govee.cli:main"

[project.urls]
Homepage = "https://github.com/donewiththedollar/my-govee"
Repository = "https://github.com/donewiththedollar/my-govee"

[tool.setuptools]
packages = ["govee"]
py-modules = ["govee_display"]
